tests/toy/neg/000942_mutation.toylang
program a = { if a sleep then; } .
